--- a/masterstylesheet.css
+++ b/masterstylesheet.css
@@ -1,1 +1,10 @@
+body {
+	background-color: Cyan;
+}
 
+.main {
+  margin-top: 30px; /* Add a top margin to avoid content overlay */
+  padding:20px;
+  text-align: center;
+  color: #f2f2f2;
+}
