added more content 1/18/2020

--- a/masterstylesheet.css
+++ b/masterstylesheet.css
@@ -1,5 +1,28 @@
 body {
-	background-color: Cyan;
+	background-color: Teal;
+}
+
+.TitleBar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  text-align: center;
+}
+
+myImage{
+	
+	transform: rotate(90deg);
+	float:left; 
+	width: 55%;
+	
+}
+
+theCaption{
+	
+	width: 170%;
+	
 }
 
 .main {
