--- a/masterstylesheet.css
+++ b/masterstylesheet.css
@@ -38,14 +38,14 @@ text-align: center;
 	
 	transform: rotate(90deg);
 	float:left; 
+	height: 55%;
 	width: 55%;
 	color: Black;
 	
 }
 
 .main figcaption{
-	
-	width: 170%;
+
 	color: Black;
 	
 }
