--- a/masterstylesheet.css
+++ b/masterstylesheet.css
@@ -39,7 +39,7 @@ text-align: center;
   font-size: 20px;
 }
 
-.main img{
+.myImage{
 	
 	transform: rotate(90deg); 
 	height: 10%;
@@ -51,6 +51,13 @@ text-align: center;
 .main figcaption{
 
 	color: Black;
+	
+}
+
+#imageSpot{
+	
+	width: 20%;
+	height: 20%;
 	
 }
 
